--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Mango_Auth;Integrated Security=True;TrustServerCertificate=True"
+  }
 }
