--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -11,7 +11,7 @@
   },
   "ApiSettings": {
     "JwtOptions": {
-      "Secret": "ToDo: Find a better way",
+      "Secret": "ToDo: Find a better way to store this value. Check azure vault, maybe it's the right place.",
       "Issuer": "mango-auth-api",
       "Audience": "mango-client"
     }
