--- a/Mango.Services.CouponAPI/appsettings.json
+++ b/Mango.Services.CouponAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Mango_Coupon;Integrated Security=True;TrustServerCertificate=True"
+  },
+  "AuthApiSettings": {
+    "Secret": "ToDo: Find a better way to store this value. Check azure vault, maybe it's the right place.",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
   }
 }
