--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Mango_ShoppingCart;Integrated Security=True;TrustServerCertificate=True"
+  },
+  "AuthApiSettings": {
+    "Secret": "ToDo: Find a better way to store this value. Check azure vault, maybe it's the right place.",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
+  }
 }
