--- a/Mango.Services.ShoppingCartAPI/Mango.Services.ShoppingCartAPI.csproj
+++ b/Mango.Services.ShoppingCartAPI/Mango.Services.ShoppingCartAPI.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>844cc697-83d7-4837-8cfc-0915af78bc96</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +18,10 @@
 	  </PackageReference>
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mango.ServiceBus\Mango.ServiceBus.csproj" />
   </ItemGroup>
 
 </Project>
