--- a/Mango.Services.EmailAPI/Mango.Services.EmailAPI.csproj
+++ b/Mango.Services.EmailAPI/Mango.Services.EmailAPI.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <UserSecretsId>844cc697-83d7-4837-8cfc-0915af78bc96</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
